--- a/STA130 HW2.ipynb
+++ b/STA130 HW2.ipynb
@@ -143,7 +143,7 @@
     "    player_choice = 1\n",
     "    # if the first choice of the player was not the winning door, then switch the door \n",
     "    if player_choice != winning_door:\n",
-    "        switch_wins += 1 # how many times of switching the door \n",
+    "        switch_wins += 1 # the time of win through switching the door \n",
     "\n",
     "# calculate the possibility of winning the game through switching the door.\n",
     "switch_win_probability = switch_wins / total_games\n",
