--- a/STA130 HW2.ipynb
+++ b/STA130 HW2.ipynb
@@ -133,7 +133,7 @@
     "\n",
     "# set up the parameters for the loop(for_in range)\n",
     "total_games = 100000  # number of times we simulate the game\n",
-    "switch_wins = 0       # how many times we win the game through switching\n",
+    "switch_wins = 0       # count a win for switching\n",
     "\n",
     "# the loop which is used to simulate the game\n",
     "for _ in range(total_games):\n",
