--- a/STA130 HW2.ipynb
+++ b/STA130 HW2.ipynb
@@ -143,12 +143,12 @@
     "    player_choice = 1\n",
     "    # if the first choice of the player was not the winning door, then switch the door \n",
     "    if player_choice != winning_door:\n",
-    "        switch_wins += 1 # the time of win through switching the door \n",
+    "        switch_wins += 1 # count a win for switching \n",
     "\n",
     "# calculate the possibility of winning the game through switching the door.\n",
     "switch_win_probability = switch_wins / total_games\n",
     "\n",
-    "# print the outcome of the possibility\n",
+    "# print the result\n",
     "print(f\"Probability of winning by switching: {switch_win_probability}\")"
    ]
   },
