--- a/STA130 HW2.ipynb
+++ b/STA130 HW2.ipynb
@@ -246,7 +246,7 @@
    "metadata": {},
    "source": [
     "7. \n",
-    "  As a whole, AI-driven assistence tools are great method to learn code,statistics and data science, especially for me who is actually a beginner of python. Although sometime I still cannot fully understand all the codings which is very complicated for me, it is enough for me to address current problems with ChatBot's help. Even though ChatBot can explain most of the coding clearly for me, sometimes I am lazy to figure out the coding. This is also a drawback of using AI-assistance as I overly depend on ChatBot's help and assistance."
+    "  As a whole, AI-driven assistence tools are great method to learn code,statistics and data science, especially for me who is actually a beginner of python. Although sometime I still cannot fully understand all the codings which is very complicated for me, it is enough for me to address current problems with ChatBot's help. Even though ChatBot can explain most of the coding clearly for me, sometimes I am lazy to figure out the coding. This is also a drawback of using AI-assistance as sometimes I overly depend on ChatBot's help and assistance."
    ]
   },
   {
