--- a/STA130 HW2.ipynb
+++ b/STA130 HW2.ipynb
@@ -235,7 +235,7 @@
    "metadata": {},
    "source": [
     "6. \n",
-    "   (1). It's very fast for ChatBot to answer my above questions, which is very helpful for me. It's very helpful as it just used several seconds to generate solutions for my problems, which is very efficient. \n",
+    "   (1). Through the interaction with Chatbot to further understand the Monte Hall problem and "Markovian Chatbot" code, I believe Chatbot is really helpful for my understanding as its explanations are really clear and concise for me. It's very fast for ChatBot to answer my above questions, which is very helpful for me. It's very helpful as it just used several seconds to generate solutions for my problems, which is very efficient. \n",
     "   (2). Interacting with ChatBot to try to figure out problems is not frustrating as I learned a lot though interacting with ChatBot with helpful suggestions and fast speed.\n",
     "   (3). Overall, ChatBot provides a great way for me to understand code which is not my strong point. As a beginner of python, ChatBot could help me a lot. However, sometimes it cannot very helpful for me to understand, because I may be lazy if I use ChatBot a lot. At that time, I would like to use ChatBot as my best companion to address problems about statistics, which is not allowed for exams and tests in classes.Overall, it's useful.\n"
    ]
